# scikit-neuromsi

./: .flake8  .gitignore  .header-template  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  Untitled.ipynb  Untitled1.ipynb  ejemplo.py  factorial.py  profile.html  profile.json  prototype.py  pyproject.toml  requirements.txt  requirements_dev.txt  sample.ipynb  setup.py  skneuromsi.py  test_prototype.py  tox.ini
.github/workflow/: ci.yml
.github/workflows/: ci.yml  skneuromsi_ci.yml  tests.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  create_new_models.ipynb  implement_models.ipynb  index.rst  installation.rst  model_comparison.ipynb  modules.rst  plot.ipynb  refs.bib  sifi.ipynb  simulate_experiments.ipynb  skneuromsi.rst  tutorial.ipynb  ventriloquist_effect.ipynb
draft/: notas_juan  sample.ipynb
drafts/: ernst_banks2002.py  kording2007.py  notes.txt  plot.py  rohe_noppeney2015.py  sample.ipynb  simple.py
legacy/: LICENSE.txt  README.md  setup.py
legacy/skneuromsi/: __init__.py  alais_burr2004.py  core.py  ernst_banks2002.py  kording2007.py  old_result
legacy/tests/: test_alais_burr2004.py  test_core.py  test_ernst_banks2002.py  test_kording2007.py
skneuromsi/: __init__.py  alais_burr2004.py  core.py  cuppini2014.py  cuppini2017.py  ejemplo.py  ernst_banks2002.py  io.py  kording2007.py  paredes2022.py  simple.py  sweep.py  testing.py
skneuromsi/bayesian/: __init__.py  _kording2007.py  _zhu2024.py  _zhu2025.py
skneuromsi/cmp/: __init__.py  ndcollection.py  spatial.py  storages.py  sweep.py  unity_report.py
skneuromsi/core/: __init__.py  constants.py  modelabc.py  plot.py  result.py  stats.py
skneuromsi/mle/: __init__.py  _alais_burr2004.py
skneuromsi/ndcollection/: __init__.py  bias_acc.py  causes_acc.py  collection.py  cplot_acc.py  plot_acc.py
skneuromsi/neural/: __init__.py  _cuppini2014.py  _cuppini2017.py  _neural_utils.py  _paredes2022.py  _paredes2025.py
skneuromsi/utils/: __init__.py  accabc.py  bunch.py  custom_json.py  ddtype_tools.py  dict_cmp.py  doctools.py  dtypetools.py  memtools.py  neural_tools.py  numcompress.py  readout_tools.py  storages.py
tests/: __init__.py  conftest.py  test_alais_burr2004.py  test_core.py  test_cuppini2014.py  test_cuppini2017.py  test_ernst_banks2002.py  test_io.py  test_kording2007.py  test_sweep.py  test_testing.py
tests/bayesian/: test_kording2007.py  test_zhu2024.py
tests/core/: test_constants.py  test_modelabc.py  test_stats.py
tests/mle/: test_alais_burr2004.py
(+87 files in other folders)
