[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that require significant execution time (deselect with '-m \"not slow\"')",
    "plot: marks tests related to matplotlib integration (deselect with '-m \"not plot\"')",
    "model: marks tests involving MSI model calculations (deselect with '-m \"not model\"')",
]
testpaths = [
    "tests",
]
addopts = "-m 'not slow' --disable-warnings"

# =============================================================================
# PACKAGING
# =============================================================================

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-neuromsi"
version = "1.0.2"
description = "Implementation of multisensory integration models in Python"
readme = "README.md"
authors = [
    {name = "Renato Paredes", email = "paredesrenato92@gmail.com"},
    {name = "Juan B. Cabral", email = "jbcabral@unc.edu.ar"},
]
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
keywords = [
    "multisensory integration",
    "computational neuroscience",
    "cognitive modelling",
    "behaviour simulation",
    "perception",
]
dependencies = [
    "numpy",
    "brainpy",
    "scipy",
    "jaxlib",
    "jax",
    "joblib",
    "bidict",
    "seaborn",
    "xarray",
    "tqdm",
    "methodtools",
    "netcdf4",
    "custom_inherit",
    "jinja2",
    "humanize",
    "pympler",
    "psutil",
    "lz4",
]

[project.urls]
Homepage = "https://github.com/renatoparedes/scikit-neuromsi"
Repository = "https://github.com/renatoparedes/scikit-neuromsi"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["skneuromsi", "skneuromsi.*"]
namespaces = false


